--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet", href="style.css"/>
 </head>
 <body>
+    <label id="counterLabel">0</label><br><br>
+    <div id="btnContainer">
+        <button id="decrease" class="buttons">Decrease</button>
+        <button id="reset" class="buttons">Reset</button>
+        <button id="increase" class="buttons">Increase</button>
+    </div>
+    
     <script src="index.js"></script>
 </body>
 </html>
