feat: deeper look on if else statements

--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet", href="style.css"/>
 </head>
 <body>
-    <label id="counterLabel">0</label><br><br>
-    <div id="btnContainer">
-        <button id="decrease" class="buttons">Decrease</button>
-        <button id="reset" class="buttons">Reset</button>
-        <button id="increase" class="buttons">Increase</button>
-    </div>
+    <input type="checkbox" id="myCheckbox">
+    <label for="myCheckbox">Subscribe</label><br><br>
+
+    <input type="radio" id="masterCardBtn" name="payment">
+    <label for="masterCardBtn">MasterCard</label><br>
+
+    <input type="radio" id="paypalBtn" name="payment">
+    <label for="paypalBtn">Paypal</label><br><br>
+
+    <button type="submit" id="submitBtn">Submit</button>
+
+    <p id="subPara"></p>
+    <p id="paymentPara"></p>
+
     
     <script src="index.js"></script>
 </body>
