feat: implement temperatur converter using fucntions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet", href="style.css"/>
 </head>
 <body>
-   
+    <div id="cont">
+        <h1>Temperatur converter</h1>
+        <input id="tempInput"/><br>
+        <input type="radio" id="celToFahrBtn" name="degrees">
+        <label for="celToFahrBtn">Celsius -> Fahrenheit</label><br>
+        <input type="radio" id="fahrToCelBtn" name="degrees">
+        <label for="fahrToCelBtn">Fahrenheit -> Celsius</label><br>
+        <button id="submitBtn">Submit</button><br>
+        <p id="result"></p>
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
