--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet", href="style.css"/>
 </head>
 <body>
-    <h1 id="h1"></h1>
-
+    <div id="clock-container">
+        <div id="clock">00:00:00</div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
